Fix extra space around image, redo save button js

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -347,16 +347,21 @@ nav {
   height: fit-content;
   text-align: center;
   margin: auto;
+  margin-top: 2.5em;
   padding: 0px;
+  max-height: 960px;
 }
 
 .inner-container {
   position: relative;
   text-align: center;
-  height: fit-content;
+  padding-top: 1.4em;
+  padding-bottom: 0.8em;
   img {
     width: 100%;
-    height: 100%;
+    height: auto;
+    padding: 0px;
+    margin: 0px;
   }
   p {
     position: relative;
@@ -365,10 +370,11 @@ nav {
     padding: 16px;
     padding-top: 0px;
     padding-bottom: 0px;
+    word-wrap: normal;
     left: 0%;
     right: 0%;
     font-family: Impact;
-    font-size: 2.5em;
+    font-size: 3em;
     text-transform: uppercase;
     color: white !important;
     letter-spacing: 1px;
@@ -378,11 +384,11 @@ nav {
   }
 
   .top-caption {
-    bottom: -2em;
+    margin-bottom: -2em;
   }
 
   .bottom-caption {
-    top: -3em;
+    margin-top: -2em;
   }
 }
 
@@ -505,7 +511,6 @@ form button {
   transition: all ease 100ms;
   background: #0588a6;
   margin: auto;
-  margin-top: 1em;
   padding: 0.333em;
   padding-left: 1em;
   padding-right: 1em;
